--- a/src/app/receipt/receipt.component.html
+++ b/src/app/receipt/receipt.component.html
@@ -1,90 +1,138 @@
-<!-- HEADER -->
-<div>
-  <!-- LOGO -->
-  <div></div>
-  <!-- TEXT -->
-  <div>
-    <!-- TITLE -->
+<div class="receipt-container">
+  <!-- HEADER -->
+  <div class="flex">
+    <!-- LOGO -->
     <div>
-      International Pure Bhakti Yoga Society Phils., Inc.
+      <img class="org-logo" src="assets/img/IPBYS_logo.jpg" />
     </div>
-    <div>
-      37-A P. Florentino St., Brgy. Lourdes, Quezon City (Head Office)
-    </div>
-    <div>
-      SEC Reg: CN201011996 &nbsp; TIN: 007-833-498 &nbsp; Tel. (632) 624 6774
+    <!-- TEXT -->
+    <div class="page-header">
+      <!-- TITLE -->
+      <div class="page-header__title">
+        International Pure Bhakti Yoga Society Phils., Inc.
+      </div>
+      <div class="page-header__subtitle">
+        37-A P. Florentino St., Brgy. Lourdes, Quezon City (Head Office)
+      </div>
+      <div class="page-header__subtitle">
+        SEC Reg: CN201011996 &nbsp; TIN: 007-833-498 &nbsp; Tel. (632) 624 6774
+      </div>
     </div>
   </div>
-</div>
 
-<!-- DOC TITLE -->
-<div>
-  OFFICIAL RECEIPT
-</div>
+  <!-- DOC TITLE -->
+  <div class="doc-title">
+    OFFICIAL RECEIPT
+  </div>
 
-<!-- RECEIPT NUMBER -->
-<div>
-  No. 200
-</div>
+  <!-- RECEIPT NUMBER -->
+  <div class="receipt-number">
+    No. 200
+  </div>
 
-<!-- DATE -->
-<div>
-  Date:
-</div>
-
-<!-- BODY -->
-<div>
-  <!-- TABLE -->
-  <div></div>
-  <!-- TEXT -->
-  <div>
-    <div>
-      <div>
-        Received from
-      </div>
-      <!-- blank here -->
-      <div></div>
+  <!-- DATE -->
+  <div class="relative-container">
+    <div class="absolute-container absolute-right date-container flex">
+      Date:
+      <p class="blank date-blank"></p>
     </div>
-    <div>
-      <div>
-        the sum of Pesos
-      </div>
-      <!-- blank here -->
-      <div></div>
+  </div>
+
+  <!-- BODY -->
+  <div class="flex receipt-body">
+    <!-- TABLE -->
+    <div class="table-container">
+      <table>
+        <tbody>
+          <tr>
+            <td colspan="3">
+              Donation in the form of
+            </td>
+          </tr>
+          <tr>
+            <td>CASH</td>
+            <td class="td-empty"></td>
+            <td class="td-empty"></td>
+          </tr>
+          <tr>
+            <td>CHECK</td>
+            <td class="td-empty"></td>
+            <td class="td-empty"></td>
+          </tr>
+          <tr>
+            <td>PAYPAL</td>
+            <td class="td-empty"></td>
+            <td class="td-empty"></td>
+          </tr>
+          <tr>
+            <td>OTHERS</td>
+            <td class="td-empty"></td>
+            <td class="td-empty"></td>
+          </tr>
+          <tr>
+            <td>&nbsp;</td>
+            <td class="td-empty"></td>
+            <td class="td-empty"></td>
+          </tr>
+          <tr>
+            <td>TOTAL</td>
+            <td class="td-empty"></td>
+            <td class="td-empty"></td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div>
-      <!-- blank -->
-      <div></div>
-      <div>
-        (PHP <span>__</span>)
-      </div>
-    </div>
-    <!-- as donation -->
-    <div>
-      <div>as donation for:</div>
-      <div>
-        <div>
-          <div>box</div>
-          <div>Feeding programs</div>
+
+    <!-- TEXT -->
+    <div class="body-text-content">
+      <div class="flex">
+        <div class="body-text-content__text-1">
+          Received from
         </div>
+        <p class="blank flex-1"></p>
+      </div>
+      <div class="flex">
         <div>
-          <div>box</div>
-          <div>Book publication</div>
+          the sum of Pesos
         </div>
+        <p class="blank flex-1"></p>
+      </div>
+      <div class="flex">
+        <p class="blank flex-1"></p>
+        <div class="flex body-text-content__text-2">
+          (PHP <p class="blank flex-1"></p>)
+        </div>
+      </div>
+      <!-- as donation -->
+      <div class="flex donation-type-container">
+        <div class="flex-1 align-center">as donation for:</div>
         <div>
-          <div>box</div>
-          <div>Others ___________</div>
+          <div class="flex">
+            <div class="flex-1 donation-type">Feeding programs</div>
+          </div>
+          <div class="flex">
+            <div class="flex-1 donation-type">Book publication</div>
+          </div>
+          <div class="flex">
+            <div class="flex-1 donation-type flex">
+              Others <p class="blank flex-1"></p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
 
-<div>
-  <div>
-    By:
+  <div class="relative-container">
+    <div class="absolute-container absolute-right date-container">
+      <div class="flex">
+        By:
+        <p class="blank flex-1"></p>
+      </div>
+    </div>
+    <div class="absolute-container absolute-right auth-sig-text">
+      Authorized Signature
+    </div>
   </div>
-  <div>
-    Authorized Signature
-  </div>
+
 </div>
