--- a/src/app/receipt/receipt.component.scss
+++ b/src/app/receipt/receipt.component.scss
@@ -1,6 +1,6 @@
 .receipt-container {
   padding: 10mm 14mm;
-  border: 1px solid red;
+  // border: 1px solid red;
   font-size: 4mm;
   width: inherit;
   height: 139.7mm;
