--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -2,3 +2,23 @@
   width: 215.9mm;
   height: 279.4mm;
 }
+
+.center-item {
+  display: flex;
+  justify-content: space-around;
+}
+
+.selection-container {
+  background-color: rgba($color: #000000, $alpha: 0.5);
+  padding: 10mm 0;
+}
+
+.preview-container {
+  margin: 10mm auto;
+  background-color: white;
+}
+
+.content-container {
+  background-color: rgba($color: #000000, $alpha: 0.5);
+  padding: 10mm;
+}
