--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,21 +3,21 @@
   src: url(assets/fonts/goudy-old-style.ttf) format('truetype');
 }
 
-/* BASE */
-html, body {
-  font-family: 'Goudy Old Style';
-  font-size: 14px;
-  font-weight: 400;
+// /* BASE */
+// html, body {
+//   font-family: 'Goudy Old Style';
+//   font-size: 14px;
+//   font-weight: 400;
 
-  height: 100%;
-  width: 100%;
+//   height: 100%;
+//   width: 100%;
 
-  margin: 0;
-  padding: 0;
+//   margin: 0;
+//   padding: 0;
 
-  -moz-osx-font-smoothing: grayscale;
-   -webkit-font-smoothing: antialiased;
-}
+//   -moz-osx-font-smoothing: grayscale;
+//    -webkit-font-smoothing: antialiased;
+// }
 
 *,
 *:before,
@@ -25,4 +25,9 @@ html, body {
   -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
           box-sizing: border-box;
+}
+html, body { height: 100%; }
+body {
+  margin: 0;
+  font-family: 'Goudy Old Style';
 }
